--- a/views/amigosPage.handlebars
+++ b/views/amigosPage.handlebars
@@ -4,7 +4,7 @@
       href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap"
       rel="stylesheet"
     />
-    <title>Gerenciar Amigos</title>
+    <title>Amigos</title>
     <link rel="icon" href="/img/favicon.png" />
     <link rel="Stylesheet" href="/css/cadastroPage.css" />
   </head>
@@ -68,7 +68,7 @@
         </div>
 
         <br>
-        <button><a href="/user?id={{id}}">⬅ Voltar para Perfil</a></button>
+        <button class="btn-gerenciar-2"><a href="/user?id={{id}}">⬅ Voltar para o Perfil</a></button>
       </div>
     </div>
   </body>
