--- a/views/cadastroPage.handlebars
+++ b/views/cadastroPage.handlebars
@@ -81,7 +81,7 @@
 
           <button id="IMPORTANTE" type="submit">Cadastrar</button>
         </form>
-        <button><a href="/login">Voltar</a></button>
+        <button class="btn-gerenciar"><a href="/login">Voltar</a></button>
       </div>
     </div>
 
