--- a/views/LoginUser.handlebars
+++ b/views/LoginUser.handlebars
@@ -37,8 +37,8 @@
           <button id="IMPORTANTE" type="submit">Logar</button>
         </form>
 
-        <button><a href="/">Voltar</a></button>
-        <p>Não possui conta? <a href="/cadastro"> Cadastre </a> uma agora!</p>
+        <button class="btn-gerenciar"><a href="/">Voltar</a></button>
+        <p>Não possui uma conta? <a href="/cadastro" style="text-decoration: underline;"> Cadastre </a> uma agora!</p>
       </div>
     </div>
 
