Arrumando link para CSS +Erro para cadastro de -18

--- a/views/LoginUser.handlebars
+++ b/views/LoginUser.handlebars
@@ -6,7 +6,7 @@
     />
     <title>Cadastro</title>
     <link rel="icon" href="/img/favicon.png" />
-    <link rel="Stylesheet" href="css/cadastroPage.css" />
+    <link rel="Stylesheet" href="/css/cadastroPage.css" />
   </head>
   <body>
     <div id="flexCenter">
@@ -38,7 +38,9 @@
         </form>
 
         <button class="btn-gerenciar"><a href="/">Voltar</a></button>
-        <p>Não possui uma conta? <a href="/cadastro" style="text-decoration: underline;"> Cadastre </a> uma agora!</p>
+        <p>Não possui uma conta?
+          <a href="/cadastro" style="text-decoration: underline;"> Cadastre </a>
+          uma agora!</p>
       </div>
     </div>
 
