--- a/views/atualizarPage.handlebars
+++ b/views/atualizarPage.handlebars
@@ -29,13 +29,19 @@
           </div>
 
           <div>
-            <input type="password" name="senha" minlength="8" value="{{senha}}" required /><br
-            />
+            <input
+              type="password"
+              name="senha"
+              minlength="8"
+              value="{{senha}}"
+              required
+            /><br />
           </div>
           <div>
             <input type="number" name="idade" value="{{idade}}" required /><br
             />
           </div>
+          <p>{{erro}}</p>
 
           <h2>Selecione sua foto de perfil:</h2>
           <div id="gradeImagens">
