--- a/views/cadastroPage.handlebars
+++ b/views/cadastroPage.handlebars
@@ -6,7 +6,7 @@
     />
     <title>Cadastro</title>
     <link rel="icon" href="/img/favicon.png" />
-    <link rel="Stylesheet" href="css/cadastroPage.css" />
+    <link rel="Stylesheet" href="/css/cadastroPage.css" />
   </head>
   <body>
     <div id="flexCenter">
@@ -45,7 +45,7 @@
             />
 
           </div>
-
+          <p>{{erro}}</p>
           <h2>Selecione sua foto de perfil:</h2>
           <div id="gradeImagens">
             <label for="pfp0" class="pfps">
