--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -6,7 +6,7 @@
     />
     <title>{{gameName}}</title>
     <link rel="icon" href="/img/favicon.png" />
-    <link rel="Stylesheet" href="css/gamePage.css" />
+    <link rel="Stylesheet" href="/css/gamePage.css" />
     </head>
   <body>
     <main id="Content">
