--- a/views/homePage.handlebars
+++ b/views/homePage.handlebars
@@ -3,7 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
     <link rel="icon" href="/img/favicon.png">
-    <link rel="Stylesheet" href="css/homePage.css">
+    <link rel="Stylesheet" href="/css/homePage.css">
     <title>Home</title>
 </head>
 <body>
