Corrigindo imagem customizada

--- a/views/UserPage.handlebars
+++ b/views/UserPage.handlebars
@@ -93,7 +93,7 @@
   </div>
   
   <div id="thirdColumn">
-    <h2>Lista de Jogos ({{biblioteca.length}})</h2>
+    <h2>Lista de Jogos ({{totalJogos}})</h2>
     
     <button class="btn-gerenciar" onclick="window.location.href='/user/addGame?id={{id}}'" style="background-color: purple; margin-bottom: 15px;">
       + Adicionar Jogo Não-PunkWinds
